--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,78 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
+html,
 body {
   margin: 0;
+  font-family: "Courier New", Courier, monospace;
+  background-color: #f0e7d8;
+}
+
+#root {
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
+  width: 100%;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 60rem;
+  padding: 2rem;
+  gap: 1rem;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.item {
+  background-color: #fff;
+  color: #333;
+  display: flex;
+  padding: 2rem;
+  border-radius: 0.5rem;
+  border: 2px solid #333;
+  font-size: 1rem;
+  transition: 0.2s ease;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.item:hover {
+  transform: translate(-2px, -2px);
+  box-shadow: 8px 8px #333;
+}
+
+.day {
+  font-size: 3rem;
+}
+
+.month {
+  font-size: 1.6rem;
+}
+
+.date {
+  border-radius: 0.4rem;
+  padding: 1rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: bold;
+  border: 2px solid black;
+  text-align: center;
+  background-color: #eafdc6;
+}
+.content {
+  flex: auto;
+  margin-left: 1rem;
+  padding: 1rem 0;
+}
+
+.title h2 {
+  margin-top: 2rem;
+}
+
+.desc {
+  font-size: 1.2 rem;
 }
